--- a/war/tools/rese/lp/index.html
+++ b/war/tools/rese/lp/index.html
@@ -18,16 +18,16 @@
 
 	<!-- CSS
     ================================================== -->
-   <link rel="stylesheet" href="css/default.css">
-	<link rel="stylesheet" href="css/layout.css">
-   <link rel="stylesheet" href="css/media-queries.css">
-   <link rel="stylesheet" href="css/animate.css">
-   <link rel="stylesheet" href="css/prettyPhoto.css">
+   <link rel="stylesheet" href="/tools/rese/lp/css/default.css">
+	<link rel="stylesheet" href="/tools/rese/lp/css/layout.css">
+   <link rel="stylesheet" href="/tools/rese/lp/css/media-queries.css">
+   <link rel="stylesheet" href="/tools/rese/lp/css/animate.css">
+   <link rel="stylesheet" href="/tools/rese/lp/css/prettyPhoto.css">
    <link href='https://fonts.googleapis.com/css?family=Merriweather+Sans' rel='stylesheet' type='text/css'>
 
    <!-- Script
    ================================================== -->
-	<script src="js/modernizr.js"></script>
+	<script src="/tools/rese/lp/js/modernizr.js"></script>
 
    <!-- Favicons
 	================================================== -->
@@ -56,13 +56,23 @@ table.type06 .even {
 	background: #efefef;
 }
 </style>
+<script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-46662474-30', 'auto');
+  ga('send', 'pageview');
+
+</script>
 </head>
 
 <body>
 
    <div id="preloader">      
       <div id="status">
-         <img src="images/preloader.gif" height="64" width="64" alt="">
+         <img src="/tools/rese/lp/images/preloader.gif" height="64" width="64" alt="">
       </div>
    </div>
 
@@ -90,7 +100,7 @@ table.type06 .even {
       </nav> <!-- end #nav-wrap -->
 
       <ul class="header-social">
-         <li><a href="#"><i class="fa fa-facebook"></i></a></li>
+         <li><a href="https://www.facebook.com/rese.space/"><i class="fa fa-facebook"></i></a></li>
          <li><a href="#"><i class="fa fa-twitter"></i></a></li>
          <li><a href="#"><i class="fa fa-google-plus"></i></a></li>
       </ul>
@@ -348,7 +358,7 @@ table.type06 .even {
                <div class="columns">
                   <h3 class="social">socialize</h3>
                   <ul>
-                     <li><a href="#">Facebook</a></li>
+                     <li><a href="https://www.facebook.com/rese.space/">Facebook</a></li>
                      <li><a href="#">Twitter</a></li>
                      <li><a href="#">GooglePlus</a></li>
                   </ul>
@@ -380,15 +390,15 @@ table.type06 .even {
    ================================================== -->
    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
    <script>window.jQuery || document.write('<script src="js/jquery-1.10.2.min.js"><\/script>')</script>
-   <script type="text/javascript" src="js/jquery-migrate-1.2.1.min.js"></script>
+   <script type="text/javascript" src="/tools/rese/lp/js/jquery-migrate-1.2.1.min.js"></script>
 
-   <script src="js/jquery.flexslider.js"></script>
-   <script src="js/waypoints.js"></script>
-   <script src="js/jquery.fittext.js"></script>
-   <script src="js/jquery.fitvids.js"></script>
-   <script src="js/imagelightbox.js"></script>
-   <script src="js/jquery.prettyPhoto.js"></script>   
-   <script src="js/main.js"></script>
+   <script src="/tools/rese/lp/js/jquery.flexslider.js"></script>
+   <script src="/tools/rese/lp/js/waypoints.js"></script>
+   <script src="/tools/rese/lp/js/jquery.fittext.js"></script>
+   <script src="/tools/rese/lp/js/jquery.fitvids.js"></script>
+   <script src="/tools/rese/lp/js/imagelightbox.js"></script>
+   <script src="/tools/rese/lp/js/jquery.prettyPhoto.js"></script>   
+   <script src="/tools/rese/lp/js/main.js"></script>
 
 </body>
 
