--- a/war/tools/rese/lp/index.html
+++ b/war/tools/rese/lp/index.html
@@ -147,9 +147,9 @@ table.type06 .even {
          <div class="six columns right">
             <h3>空き時間を自動計算してくれる予約ページ</h3>
 
-            <p>お客様から予約が入る度に空き状況を確認していませんか？Reseでは空き状況を全て自動で算出してくれます。
-            予約が入ると、お客様とオーナー様にメールで通知が届くので、予約を見逃すこともありません。
-            <a href="">サンプル</a>はこちら。
+            <p>お客様から予約が入る度に空き状況を確認していませんか？Reseでは空き状況を全て自動で算出してくれます。<br>
+            予約が入ると、お客様とオーナー様にメールで通知が届くので、予約を見逃すこともありません。<br>
+            <a href="http://rese.space/r/reseinfomail/379941">サンプル</a>はこちら。
             </p>
          </div>
 
@@ -160,6 +160,72 @@ table.type06 .even {
       </div>
 
       <div class="row feature responsive">
+
+         <div class="six columns left">
+            <h3>予約はカレンダーに自動で追加</h3>
+
+            <p>予約が入るとカレンダーに自動で追加されます。<br>
+            パソコンが苦手な方でも簡単に管理することが出来ます。
+            </p>
+         </div>
+
+         <div class="six columns feature-media right">
+             <img src="/img/rese/lp/reserveList.png" alt="" />
+         </div>
+
+      </div>
+      
+      <section id="pricing">
+	      <div class="row section-head">
+	         <h1>Rese(リセ)の使い方</h1>
+	         <p style="color: #777676;">簡単３ステップで自分だけの予約ページが完成します
+	         </p>
+	      </div>
+	      <div class="row feature responsive">
+		      <div class="six columns left">
+		      <h3>１．営業時間の設定</h3>
+		      <p style="color: #777676;">曜日ごとに営業時間を設定しましょう。</p>
+		      </div>
+		      <div class="six columns feature-media right">
+	             <img src="/img/rese/editOperationHour.png" alt="" />
+	         </div>
+         </div>
+         <div class="row feature responsive">
+		      <div class="six columns left">
+		      <h3>２．予約ページの作成</h3>
+		      <p style="color: #777676;">受付開始期間、キャンセル期間などを設定して予約ページを作成しましょう。</p>
+		      </div>
+		      <div class="six columns feature-media right">
+	             <img src="/img/rese/createMenuPage.png" alt="" />
+	         </div>
+         </div>
+         <div class="row feature responsive">
+		      <div class="six columns left">
+		      <h3>３．メニューの作成</h3>
+		      <p style="color: #777676;">値段、時間などを設定してメニューを作成しましょう。<br>
+		      これで予約ページは完成！
+		      </p>
+		      </div>
+		      <div class="six columns feature-media right">
+	             <img src="/img/rese/createMenu.png" alt="" />
+	         </div>
+         </div>
+         <div class="row feature responsive">
+		      <div class="six columns left">
+		      <h3>予約ページのURLを共有したり、ブログ・サイトに埋め込んで、お客様に予約してもらおう！</h3>
+		      </div>
+		      <div class="six columns feature-media right">
+	             <img src="/img/rese/lp/woman_iphone.jpg" alt="" />
+	         </div>
+         </div>
+      </section>
+      
+      <div class="row feature design">
+      	<div class="row section-head">
+	         <h1>他の便利な機能</h1>
+	         <p>お店の運営に役立つサービスが盛りだくさん。これらも含めて全て無料！
+	         </p>
+      	</div>
 
          <div class="six columns left">
             <h3>顧客管理も自動で</h3>
@@ -187,24 +253,6 @@ table.type06 .even {
 
          <div class="six columns feature-media left">
              <img src="/img/rese/lp/report.png" alt="" />
-         </div>
-
-      </div>
-
-      <div class="row feature video">
-
-         <div class="six columns left">
-            <h3>予約ページはリンクで簡単共有</h3>
-
-            <p>予約ページはメッセージアプリなどで簡単に共有が出来ます。
-            また、予約ボタンを使えば、HP・ブログなどに設置が可能です。
-            </p>
-         </div>
-
-         <div class="six columns feature-media right">
-             <div class="fluid-video-wrapper">
-                  <img alt="" src="/img/rese/lp/woman_iphone.jpg" /> 
-             </div>
          </div>
 
       </div>
